# tuilog

./: Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml  text.txt
assets/: ascii-art.txt  config.toml  theme.toml
assets/background/: nixos.txt
assets/icons/: error.txt
assets/logos/: error.txt
config/pam/: tuilog
config/systemd/: tuilog.service  tuilog@tty1.service
src/: auth.rs  background.rs  cache.rs  config.rs  content_box.rs  error.rs  main.rs  message.rs  session.rs  sys_ctrl.rs  system_control.rs  theme.rs  utils.rs
src/session/: default_shell.rs  env.rs  environment.rs  mod.rs  session.rs  shell.rs  start.rs  terminal.rs  xsession.rs
src/sessions/: default_shell.rs  environment.rs  mod.rs  session.rs  start.rs  xsessions.rs
src/state/: cache.rs  config.rs  mod.rs
src/tui/: background.rs  content_box.rs  message.rs  mod.rs
src/ui/: background.rs  content_box.rs  message.rs
