[package]
name = "tuilog"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21.1"
gethostname = "0.5.0"
lazy_static = "1.5.0"
libc = "0.2.169"
pam = "0.8.0"
text-to-ascii-art = "0.1.10"
tokio = { version = "1.42.0", features = ["full"] }
unicode-width = "0.2.0"
users = "0.11.0"
zbus = "5.2.0"
