[package]
name = "tuilog"
version = "0.0.1"
edition = "2021"

[dependencies]
cursive = "0.21.1"
gethostname = "0.5.0"
indexmap = "2.10.0"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = [ "process", "user", "term", "fs" ] }
pam = "0.8.0"
rust-ini = "0.21.2"
serde = { version = "1.0.216", features = ["derive"] }
text-to-ascii-art = "0.1.10"
toml = "0.8.19"
unicode-width = "0.2.0"
users = "0.11.0"
zbus = "5.2.0"
